--- a/privacy.html
+++ b/privacy.html
@@ -30,8 +30,8 @@
     <header class="bg-white shadow-md">
         <div class="container mx-auto max-w-4xl px-4">
             <div class="flex justify-between items-center py-4">
-                <a href="/" class="text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</a>
-                <a href="/" class="text-sm font-semibold text-blue-600 hover:underline">← Back to App</a>
+                <a href="../" class="text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</a>
+                <a href="../" id="backToApp" class="text-sm font-semibold text-blue-600 hover:underline">← Back to CEORater</a>
             </div>
         </div>
     </header>
@@ -42,44 +42,36 @@
                 <span class="font-orbitron italic text-blue-600">CEORater</span> Privacy Policy
             </h1>
             <p class="text-sm text-gray-500 mb-8"><strong>Last Updated:</strong> September 5, 2025</p>
-
             <div class="space-y-6 text-gray-700 leading-relaxed">
-                <p>This Privacy Policy describes how CEORater ("we," "us," or "our") collects, uses, and discloses your information when you use our application (the "Service").</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">1. Information We Collect</h3>
-                <p>We collect information that you provide directly to us and information that is automatically collected when you use our Service.</p>
-                
-                <h4 class="text-lg font-semibold text-gray-800">A. Information You Provide to Us:</h4>
-                <ul class="list-disc list-inside space-y-2 pl-4">
-                    <li><strong>Account Information:</strong> When you create an account, we collect your email address and a unique user identifier. This information is used to authenticate you and provide you with access to your account.</li>
-                    <li><strong>Watchlist Data:</strong> We collect and store the list of CEOs that you choose to add to your personal watchlist. This data is linked to your account to allow you to access your watchlist across devices.</li>
+                <h2 class="text-2xl font-bold text-gray-800">1. Introduction</h2>
+                <p>This Privacy Policy describes how CEORater ("we," "us," or "our") collects, uses, and discloses your information in connection with your use of our website and application (the "Service"). By using the Service, you agree to the collection and use of information in accordance with this policy.</p>
+                <h2 class="text-2xl font-bold text-gray-800">2. Information We Collect</h2>
+                <p>We collect information to provide and improve our Service. The types of information we collect include:</p>
+                <ul class="list-disc list-inside space-y-2">
+                    <li><strong>Personal Information:</strong> When you create an account, we collect your email address. This is the only personal information we collect directly.</li>
+                    <li><strong>Watchlist Data:</strong> We store a list of CEOs you add to your watchlist. This data is associated with your account but is not personally identifiable on its own.</li>
+                    <li><strong>Usage Data:</strong> We may collect data on how the Service is accessed and used ("Usage Data"). This may include your IP address, browser type, pages visited, time spent on pages, and other diagnostic data.</li>
                 </ul>
-
-                <h4 class="text-lg font-semibold text-gray-800">B. Information from Third-Party Services:</h4>
-                <p>If you choose to log in to our Service using a third-party service like Google or Microsoft, we will receive personal information from that service, such as your email address and name, as permitted by your privacy settings on that service.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">2. How We Use Your Information</h3>
-                <p>We use the information we collect for the following purposes:</p>
-                <ul class="list-disc list-inside space-y-2 pl-4">
-                    <li><strong>To Provide and Maintain the Service:</strong> To authenticate users, save personal watchlists, and ensure the app functions correctly.</li>
-                    <li><strong>To Personalize Your Experience:</strong> To display your saved watchlist and other personalized content.</li>
-                    <li><strong>To Communicate with You:</strong> To send important notices, such as password reset emails or updates regarding your account. We will not send you marketing emails without your consent.</li>
+                <h2 class="text-2xl font-bold text-gray-800">3. How We Use Your Information</h2>
+                <p>We use the collected information for various purposes:</p>
+                <ul class="list-disc list-inside space-y-2">
+                    <li>To provide and maintain the Service.</li>
+                    <li>To personalize your experience, such as saving your watchlist.</li>
+                    <li>To monitor the usage of the Service and analyze trends.</li>
+                    <li>To detect, prevent, and address technical issues.</li>
+                    <li>To communicate with you about your account.</li>
                 </ul>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">3. How We Share Your Information</h3>
-                <p>We do not sell your personal information to third parties. We may share your information only in the following limited circumstances:</p>
-                <ul class="list-disc list-inside space-y-2 pl-4">
-                    <li><strong>With Service Providers:</strong> We use third-party services, such as Firebase (a Google service), to provide authentication and database hosting. These service providers have access to your information only to perform these tasks on our behalf and are obligated not to disclose or use it for any other purpose.</li>
-                    <li><strong>For Legal Reasons:</strong> We may disclose your information if we are required to do so by law or in response to valid requests by public authorities (e.g., a court or a government agency).</li>
+                <h2 class="text-2xl font-bold text-gray-800">4. Data Storage and Security</h2>
+                <p>Your data is stored in Firebase, a service provided by Google. We implement industry-standard security measures to protect your information, but remember that no method of transmission over the Internet or method of electronic storage is 100% secure. While we strive to use commercially acceptable means to protect your Personal Information, we cannot guarantee its absolute security.</p>
+                <h2 class="text-2xl font-bold text-gray-800">5. Disclosure of Data</h2>
+                <p>We will not sell, rent, or trade your email address or personal information to third parties. We may disclose your information in the good faith belief that such action is necessary to:</p>
+                <ul class="list-disc list-inside space-y-2">
+                    <li>Comply with a legal obligation.</li>
+                    <li>Protect and defend our rights or property.</li>
+                    <li>Prevent or investigate possible wrongdoing in connection with the Service.</li>
+                    <li>Protect the personal safety of users of the Service or the public.</li>
                 </ul>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">4. Data Security</h3>
-                <p>We take reasonable measures to help protect your personal information from loss, theft, misuse, and unauthorized access. However, no electronic transmission or storage is 100% secure, and we cannot guarantee its absolute security.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">5. Your Data Rights</h3>
-                <p>You have the right to access, update, or request deletion of your personal information. You can manage your account information and delete your account and all associated data directly within the app's settings.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">6. Children's Privacy</h3>
+                <h2 class="text-2xl font-bold text-gray-800">6. Children's Privacy</h2>
                 <p>Our Service is not intended for use by children under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If we become aware that we have collected personal information from a child under 13, we will take steps to delete that information.</p>
 
                 <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">7. Changes to This Privacy Policy</h3>
@@ -94,11 +86,13 @@
 
     <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
-            <a href="/" class="text-blue-600 hover:underline">Home</a> | 
+            <a href="../" class="text-blue-600 hover:underline">Home</a> | 
             <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a> |
             <a href="/support.html" class="text-blue-600 hover:underline">Support</a>
         </p>
-        <p>CEORater 2025. A TEK2day Holdings company.</p>
+        <p>&copy; 2025 CEORater. All rights reserved.</p>
     </footer>
+
+    <script defer src="/CEORater/script.js"></script>
 </body>
 </html>
