--- a/privacy.html
+++ b/privacy.html
@@ -31,7 +31,7 @@
         <div class="container mx-auto max-w-4xl px-4">
             <div class="flex justify-between items-center py-4">
                 <a href="../" class="text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</a>
-                <a href="../" id="backToApp" class="text-sm font-semibold text-blue-600 hover:underline">← Back to CEORater</a>
+                <a href="#" class="text-sm font-semibold text-blue-600 hover:underline" onclick="event.preventDefault(); window.history.back();">← Back to CEORater</a>
             </div>
         </div>
     </header>
@@ -93,6 +93,5 @@
         <p>&copy; 2025 CEORater. All rights reserved.</p>
     </footer>
 
-    <script defer src="/CEORater/script.js"></script>
 </body>
 </html>
