--- a/profile.html
+++ b/profile.html
@@ -85,7 +85,7 @@
                 <h4 class="font-medium text-blue-900">Our Policies</h4>
                 <p class="text-sm text-blue-700 mt-1">
                   Review our 
-                  <a href="https://www.ceorater.com/privacy.html" target="_blank" class="underline hover:no-underline">Privacy Policy</a>
+                  <a id="privacy-link" class="underline hover:no-underline" style="cursor: pointer;">Privacy Policy</a>
                   to understand how we collect, use, and protect your data.
                 </p>
               </div>
