--- a/privacy.html
+++ b/privacy.html
@@ -86,11 +86,11 @@
 
     <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
-            <a href="/" class="text-blue-600 hover:underline">Home</a> | 
-            <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a> |
-            <a href="/support.html" class="text-blue-600 hover:underline">Contact Us</a>
+            <a id="footer-home-link" class="text-blue-600 hover:underline" style="cursor: pointer;">Home</a> | 
+            <a id="footer-methodology-link" class="text-blue-600 hover:underline" style="cursor: pointer;">Our Methodology</a> |
+            <a id="footer-support-link" class="text-blue-600 hover:underline" style="cursor: pointer;">Contact Us</a>
         </p>
-        <p>&copy; 2024 CEORater. All rights reserved.</p>
     </footer>
+    
 </body>
 </html>
