--- a/support.html
+++ b/support.html
@@ -31,8 +31,8 @@
     <header class="bg-white shadow-md">
         <div class="container mx-auto max-w-4xl px-4">
             <div class="flex justify-between items-center py-4">
-                <a href="/" class="text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</a>
-                <a href="/" class="text-sm font-semibold text-blue-600 hover:underline">← Back to App</a>
+                <a id="support-header-logo" class="text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600" style="cursor: pointer;">CEORater</a>
+                <a id="support-back-to-app" class="text-sm font-semibold text-blue-600 hover:underline" style="cursor: pointer;">← Back to App</a>
             </div>
         </div>
     </header>
@@ -66,13 +66,13 @@
                 <p>Go to your watchlist, find the CEO you want to remove, and tap the "Remove" button next to their name. The change will be saved automatically.</p>
 
                 <h3 class="text-lg font-semibold text-gray-800">How are CEO ratings calculated?</h3>
-                <p>Our rating methodology combines multiple data sources and metrics. For detailed information about how we calculate ratings, please visit our <a href="/methodology.html" class="text-blue-600 hover:underline">Methodology page</a>.</p>
+                <p>Our rating methodology combines multiple data sources and metrics. For detailed information about how we calculate ratings, please visit our <a id="support-body-methodology" class="text-blue-600 hover:underline" style="cursor: pointer;">Methodology page</a>.</p>
 
                 <h3 class="text-lg font-semibold text-gray-800">Why can't I find a specific CEO?</h3>
                 <p>CEORater is focused on NASDAQ 100 company CEOs.</p>
 
                 <h3 class="text-lg font-semibold text-gray-800">Is my data secure?</h3>
-                <p>Yes, we take data security seriously. Your personal information and watchlist data are protected using industry-standard security measures. For more details, see our <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a>.</p>
+                <p>Yes, we take data security seriously. Your personal information and watchlist data are protected using industry-standard security measures. For more details, see our <a id="support-body-privacy" class="text-blue-600 hover:underline" style="cursor: pointer;">Privacy Policy</a>.</p>
 
                 <h3 class="text-lg font-semibold text-gray-800">How do I delete my account?</h3>
                 <p>You can manage your account settings within the app. If you need assistance with account deletion, please contact us at the email address above.</p>
@@ -111,11 +111,12 @@
     <!-- Footer -->
     <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
-            <a href="/" class="text-blue-600 hover:underline">Home</a> | 
-            <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a> |
-            <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a>
+            <a id="support-footer-home" class="text-blue-600 hover:underline" style="cursor: pointer;">Home</a> | 
+            <a id="support-footer-methodology" class="text-blue-600 hover:underline" style="cursor: pointer;">Our Methodology</a> |
+            <a id="support-footer-privacy" class="text-blue-600 hover:underline" style="cursor: pointer;">Privacy Policy</a>
         </p>
         <p>CEORater 2025. A TEK2day Holdings company.</p>
     </footer>
 </body>
+
 </html>
