--- a/index.html
+++ b/index.html
@@ -302,9 +302,9 @@
 
       <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
         <p class="mb-2">
-          <a href="/methodology.html" class="text-blue-600 hover:underline">Our Methodology</a> |
-          <a href="/privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a> |
-          <a href="/support.html" class="text-blue-600 hover:underline">Support</a>
+          <a id="index-footer-methodology" class="text-blue-600 hover:underline" style="cursor: pointer;">Our Methodology</a> |
+          <a id="index-footer-privacy" class="text-blue-600 hover:underline" style="cursor: pointer;">Privacy Policy</a> |
+          <a id="index-footer-support" class="text-blue-600 hover:underline" style="cursor: pointer;">Support</a>
         </p>
         <p>CEORater 2025. A TEK2day Holdings company.</p>
       </footer>
@@ -433,3 +433,4 @@
   </script>
 </body>
 </html>
+
