--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </noscript>
 
   <!-- Tailwind (compiled) -->
-  <link rel="stylesheet" href="./dist/output.css" />
+  <link rel="stylesheet" href="./output.css" />
 
   <script>
     // Start fetching data immediately, before anything else loads
@@ -433,4 +433,5 @@
   </script>
 </body>
 </html>
+
 
