--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Account Settings - CEORater</title>
 
-  <!-- Tailwind + fonts -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -15,28 +14,9 @@
   <style>
     .font-orbitron { font-family: 'Orbitron', monospace; }
     .font-inter { font-family: 'Inter', sans-serif; }
-
-    /* Safe areas */
     html, body { height: 100%; }
-    body {
-      padding-left: env(safe-area-inset-left);
-      padding-right: env(safe-area-inset-right);
-      padding-bottom: env(safe-area-inset-bottom);
-      background: #F9FAFB;
-    }
-    /* Sticky header that clears the notch */
-    .header-sticky {
-      position: sticky;
-      top: env(safe-area-inset-top);
-      z-index: 50;
-      background: rgba(255,255,255,0.9);
-      backdrop-filter: saturate(180%) blur(8px);
-    }
-    .main-scroll {
-      min-height: calc(100vh - env(safe-area-inset-top));
-    }
-
-    /* Avatar circle */
+    /* extra cushion so first paragraph never sits under the sticky header */
+    .under-header { padding-top: calc(env(safe-area-inset-top) + 12px); }
     #profileAvatar { width: 4rem; height: 4rem; border-radius: 9999px; }
     @media (min-width: 768px) { #profileAvatar { width: 5rem; height: 5rem; } }
   </style>
@@ -60,7 +40,7 @@
       </div>
     </header>
 
-    <main class="main-scroll mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
+    <main class="main-scroll under-header mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
       <div class="mb-8">
         <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2">Account Settings</h1>
         <p class="text-gray-600">Manage your CEORater account preferences and data.</p>
@@ -147,7 +127,6 @@
   <script defer src="./auth.js"></script>
   <script defer src="./script.js"></script>
 
-  <!-- Inline: auth guard + profile fill -->
   <script>
     document.addEventListener('DOMContentLoaded', function () {
       const waitForFirebase = (cb, tries = 50) => {
@@ -157,11 +136,9 @@
       };
 
       waitForFirebase(() => {
-        // Ensure app is initialized on this page
         if (window.firebaseConfig && (!firebase.apps || !firebase.apps.length)) {
           firebase.initializeApp(window.firebaseConfig);
         }
-
         firebase.auth().onAuthStateChanged((user) => {
           if (!user) { window.location.href = './'; return; }
 
@@ -184,7 +161,6 @@
         });
       });
 
-      // Keep the Privacy link in-app even if other handlers run
       document.getElementById('privacy-link')?.addEventListener('click', (e) => {
         e.preventDefault();
         window.location.href = './privacy.html';
