--- a/privacy.html
+++ b/privacy.html
@@ -1,96 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - CEORater</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet">
-    <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              fontFamily: {
-                'sans': ['Inter', 'sans-serif'],
-                'orbitron': ['Orbitron', 'sans-serif'],
-              },
-            }
-          }
-        }
-    </script>
-    <style>
-        body {
-            font-family: 'Inter', sans-serif;
-        }
-    </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <title>Privacy Policy - CEORater</title>
+
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="style.css" />
+
+  <style>
+    .font-orbitron { font-family: 'Orbitron', monospace; }
+    .under-header { padding-top: calc(env(safe-area-inset-top) + 8px); }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800">
-    <header class="bg-white shadow-md">
-        <div class="container mx-auto max-w-4xl px-4">
-            <div class="flex justify-between items-center py-4">
-                <a href="/" class="text-2xl md:text-3xl font-orbitron italic font-bold text-blue-600">CEORater</a>
-            </div>
-        </div>
-    </header>
+<body class="bg-gray-50 font-inter">
+  <header class="header-sticky border-b border-gray-200">
+    <div class="px-4 py-4 md:px-8 flex items-center justify-between">
+      <a href="./" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
+        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path>
+        </svg>
+        <span class="text-sm">Back to CEORater</span>
+      </a>
+      <h1 class="font-orbitron text-blue-600 text-xl md:text-2xl">CEORater</h1>
+      <span></span>
+    </div>
+  </header>
 
-    <main class="container mx-auto max-w-4xl px-4 py-8 md:py-12">
-        <div class="bg-white rounded-lg shadow-md p-6 md:p-10">
-            <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">
-                <span class="font-orbitron italic text-blue-600">CEORater</span> Privacy Policy
-            </h1>
-            <p class="text-sm text-gray-500 mb-8"><strong>Last Updated:</strong> September 5, 2025</p>
+  <main class="main-scroll under-header mx-auto px-4 py-6 md:max-w-3xl">
+    <!-- YOUR PRIVACY CONTENT HERE (unchanged) -->
+    <!-- Keep the rest of the document content as-is -->
+  </main>
 
-            <div class="prose max-w-none text-gray-700 space-y-4">
-                <p>
-                    Your privacy is important to us. This Privacy Policy explains how we collect, use, disclose, and safeguard your information when you use our CEORater mobile application (the "Service").
-                </p>
-                <p>
-                    By accessing or using the Service, you agree to this Privacy Policy. If you do not agree, please do not use our Service.
-                </p>
+  <footer class="footer-safe text-center text-sm text-blue-700 p-4 space-x-4">
+    <a href="./">Home</a>
+    <a href="./methodology.html">Our Methodology</a>
+    <a href="./support.html">Contact Us</a>
+  </footer>
 
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">1. Information We Collect</h3>
-                <p>We may collect personal information that you voluntarily provide to us when you register for the Service, such as your name and email address. We also collect information about your use of the Service, such as your watchlist selections and account preferences.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">2. Use of Your Information</h3>
-                <p>We use the information we collect to:</p>
-                <ul class="list-disc list-inside space-y-1">
-                    <li>Provide and maintain the Service.</li>
-                    <li>Personalize your experience.</li>
-                    <li>Communicate with you about your account.</li>
-                    <li>Improve our Service and develop new features.</li>
-                </ul>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">3. Disclosure of Your Information</h3>
-                <p>We do not sell, trade, or otherwise transfer your personal information to outside parties without your consent, except as required by law.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">4. Data Security</h3>
-                <p>We implement a variety of security measures to maintain the safety of your personal information. However, no method of transmission over the Internet or electronic storage is 100% secure.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">5. Third-Party Services</h3>
-                <p>We use third-party services like Firebase Authentication and Firestore to manage user data. These services have their own privacy policies.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">6. Children's Privacy</h3>
-                <p>Our Service is not intended for use by children under the age of 13. We do not knowingly collect personally identifiable information from children under 13. If we become aware that we have collected personal information from a child under 13, we will take steps to delete that information.</p>
-
-                <h3 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">7. Changes to This Privacy Policy</h3>
-                <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy Policy on this page and updating the "Last Updated" date.</p>
-
-                <h3 id="contact-us" class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">8. Contact Us</h3>
-                <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-                <p><a href="mailto:support@ceorater.com" class="text-blue-600 hover:underline"><strong>support@ceorater.com</strong></a></p>
-            </div>
-        </div>
-    </main>
-
-    <footer class="text-center mt-8 py-8 border-t text-sm text-gray-500">
-        <p class="mb-2">
-            <a id="footer-home-link" class="text-blue-600 hover:underline" style="cursor: pointer;">Home</a> | 
-            <a id="footer-methodology-link" class="text-blue-600 hover:underline" style="cursor: pointer;">Our Methodology</a> |
-            <a id="footer-support-link" class="text-blue-600 hover:underline" style="cursor: pointer;">Contact Us</a>
-        </p>
-    </footer>
-    
+  <!-- Optional: mailto on Simulator fallback (real devices open Mail) -->
+  <script>
+    document.addEventListener('click', (e) => {
+      const a = e.target.closest('a[href]');
+      if (!a) return;
+      const href = a.getAttribute('href') || '';
+      if (/^mailto:/i.test(href) && !/iPhone|iPad|iPod/.test(navigator.userAgent)) {
+        e.preventDefault();
+        try { navigator.clipboard.writeText(href.replace(/^mailto:/i,'')); } catch {}
+        alert('Email copied: ' + href.replace(/^mailto:/i,''));
+      }
+    });
+  </script>
 </body>
 </html>
