--- a/profile.html
+++ b/profile.html
@@ -43,7 +43,7 @@
     <main class="main-scroll under-header mx-auto px-4 py-8 md:py-12 md:max-w-4xl">
       <div class="mb-8">
         <h1 class="text-3xl md:text-4xl font-bold text-gray-900 mb-2">Account Settings</h1>
-        <p class="text-gray-600">Manage your CEORater account preferences and data.</p>
+        <p class="text-gray-600">Manage your account and data.</p>
       </div>
 
       <div class="bg-white rounded-lg shadow-sm border border-gray-200 overflow-hidden mb-8">
@@ -55,7 +55,7 @@
           <div class="flex items-center space-x-6 mb-6">
             <div id="profileAvatar" data-user-avatar class="bg-blue-100 text-blue-600 rounded-full flex items-center justify-center font-semibold text-xl md:text-2xl">--</div>
             <div>
-              <h3 id="profileEmail" class="text-lg font-medium text-gray-900">Loading...</h3>
+              <h3 id="profileEmail" class="text-sm md:text-base font-normal text-gray-900 break-all">Loading...</h3>
               <p id="profileProvider" class="text-sm text-gray-600">Email/Password account</p>
               <p class="text-sm text-green-600 mt-1">✓ Verified account</p>
             </div>
