--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <title>Privacy Policy - CEORater</title>
 
+  <!-- Tailwind + fonts -->
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -13,10 +14,14 @@
 
   <style>
     .font-orbitron { font-family: 'Orbitron', monospace; }
+    .font-inter { font-family: 'Inter', sans-serif; }
+    /* extra cushion so the first lines never sit under the sticky header */
     .under-header { padding-top: calc(env(safe-area-inset-top) + 8px); }
   </style>
 </head>
 <body class="bg-gray-50 font-inter">
+
+  <!-- Sticky, safe-area-aware header with back link -->
   <header class="header-sticky border-b border-gray-200">
     <div class="px-4 py-4 md:px-8 flex items-center justify-between">
       <a href="./" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
@@ -30,18 +35,68 @@
     </div>
   </header>
 
-  <main class="main-scroll under-header mx-auto px-4 py-6 md:max-w-3xl">
-    <!-- YOUR PRIVACY CONTENT HERE (unchanged) -->
-    <!-- Keep the rest of the document content as-is -->
+  <main class="main-scroll under-header mx-auto px-4 py-6 md:py-8 md:max-w-3xl">
+    <!-- Title card -->
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-6">
+      <h2 class="text-2xl md:text-3xl font-bold text-gray-900">
+        <span class="font-orbitron text-blue-600">CEORater</span> Privacy Policy
+      </h2>
+      <p class="text-xs text-gray-500 mt-2">Last Updated: September 5, 2025</p>
+    </section>
+
+    <!-- Sections -->
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-4">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">1. Information We Collect</h3>
+      <p class="text-gray-700">We may collect personal information that you provide to us, such as your name, email address, and account preferences. We also collect information about your use of the Service, such as your watchlist selections and app interactions.</p>
+    </section>
+
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-4">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">2. How We Use Your Information</h3>
+      <p class="text-gray-700">We use the information we collect to operate, maintain, and improve the Service; personalize your experience; provide customer support; and comply with legal obligations.</p>
+    </section>
+
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-4">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">3. Sharing of Information</h3>
+      <p class="text-gray-700">We do not sell your personal information. We may share information with service providers who perform services on our behalf (e.g., hosting, analytics), only as necessary and subject to confidentiality obligations.</p>
+    </section>
+
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-4">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">4. Data Retention</h3>
+      <p class="text-gray-700">We retain your information for as long as your account is active or as needed to provide the Service. We may also retain and use information as required by law, to resolve disputes, and to enforce our agreements.</p>
+    </section>
+
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-4">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">5. Security</h3>
+      <p class="text-gray-700">We use reasonable administrative, technical, and physical safeguards designed to protect your information. No method of transmission or storage is completely secure; we cannot guarantee absolute security.</p>
+    </section>
+
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-4">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">6. Children’s Privacy</h3>
+      <p class="text-gray-700">The Service is not intended for use by children under 13. We do not knowingly collect personal information from children under 13. If we learn we have collected such information, we will take steps to delete it.</p>
+    </section>
+
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5 mb-4">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">7. Changes to This Privacy Policy</h3>
+      <p class="text-gray-700">We may update this policy from time to time. We will notify you of material changes by posting the new policy in the app and updating the “Last Updated” date above.</p>
+    </section>
+
+    <section class="bg-white border border-gray-200 rounded-lg shadow-sm p-5">
+      <h3 class="text-xl font-semibold text-gray-900 mb-2">8. Contact Us</h3>
+      <p class="text-gray-700">If you have questions about this Privacy Policy, please contact us at:</p>
+      <p class="mt-2">
+        <a class="text-blue-600 underline" href="mailto:support@ceorater.com">support@ceorater.com</a>
+      </p>
+    </section>
   </main>
 
+  <!-- Footer with safe-area padding -->
   <footer class="footer-safe text-center text-sm text-blue-700 p-4 space-x-4">
     <a href="./">Home</a>
     <a href="./methodology.html">Our Methodology</a>
     <a href="./support.html">Contact Us</a>
   </footer>
 
-  <!-- Optional: mailto on Simulator fallback (real devices open Mail) -->
+  <!-- Optional: mailto fallback for Simulator -->
   <script>
     document.addEventListener('click', (e) => {
       const a = e.target.closest('a[href]');
