--- a/support.html
+++ b/support.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Orbitron:wght@700&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="./style.css" />
 
   <style>
     .font-orbitron { font-family: 'Orbitron', monospace; }
@@ -21,8 +21,8 @@
 </head>
 <body class="bg-gray-50 font-inter">
 
-  <!-- Sticky, safe-area-aware header identical to profile.html -->
-  <header class="header-sticky border-b border-gray-200">
+  <!-- Solid, safe-area-aware header (opaque white) -->
+  <header class="header-sticky border-b border-gray-200" style="background:#fff;backdrop-filter:none">
     <div class="px-4 py-4 md:px-8 flex items-center justify-between">
       <a id="support-back-to-app" href="./" class="text-blue-600 hover:text-blue-700 flex items-center gap-2">
         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -58,54 +58,27 @@
         <h2 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">Frequently Asked Questions</h2>
 
         <h3 class="text-lg font-semibold text-gray-800">How do I add CEOs to my watchlist?</h3>
-        <p>Simply search for a CEO using the search function in the app, then tap the "Add to Watchlist" button on their profile page. Your watchlist is automatically saved to your account.</p>
+        <p>Search for a CEO in the app, then tap “Add to Watchlist” on their profile. Your watchlist saves to your account.</p>
 
         <h3 class="text-lg font-semibold text-gray-800">How do I remove CEOs from my watchlist?</h3>
-        <p>Go to your watchlist, find the CEO you want to remove, and tap the "Remove" button next to their name. The change will be saved automatically.</p>
+        <p>Open your watchlist, find the CEO, and tap “Remove”.</p>
 
         <h3 class="text-lg font-semibold text-gray-800">How are CEO ratings calculated?</h3>
         <p>
-          Our rating methodology combines multiple data sources and metrics. For detailed information about how we calculate ratings,
-          please visit our
+          Our rating methodology combines multiple metrics. See our
           <a id="support-body-methodology" href="./methodology.html" class="text-blue-600 hover:underline">Methodology page</a>.
         </p>
 
-        <h3 class="text-lg font-semibold text-gray-800">Why can't I find a specific CEO?</h3>
-        <p>CEORater is focused on NASDAQ 100 company CEOs.</p>
-
         <h3 class="text-lg font-semibold text-gray-800">Is my data secure?</h3>
         <p>
-          Yes, we take data security seriously. Your personal information and watchlist data are protected using industry-standard security measures.
-          For more details, see our
+          Yes. For details, read our
           <a id="support-body-privacy" href="./privacy.html" class="text-blue-600 hover:underline">Privacy Policy</a>.
         </p>
 
-        <h3 class="text-lg font-semibold text-gray-800">How do I delete my account?</h3>
-        <p>You can manage your account settings within the app. If you need assistance with account deletion, please contact us at the email address above.</p>
-
-        <!-- Technical Issues -->
-        <h2 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">Technical Issues</h2>
-        <p>If you're experiencing technical problems with the app, please try these steps:</p>
-        <ul class="list-disc list-inside space-y-2 pl-4">
-          <li>Close and restart the app</li>
-          <li>Check that you have the latest version installed</li>
-          <li>Ensure you have a stable internet connection</li>
-          <li>Restart your device if the issue persists</li>
-        </ul>
-        <p class="mt-4">If these steps don't resolve the issue, please contact us with details about the problem, including your device model and iOS version.</p>
-
-        <!-- Feature Requests -->
-        <h2 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">Feature Requests</h2>
-        <p>We love hearing from our users! If you have ideas for new features or improvements, please send them our way. While we can't implement every suggestion, we carefully consider all feedback to make CEORater better.</p>
-
-        <!-- App Updates -->
-        <h2 class="text-2xl font-bold text-gray-800 pt-4 border-t mt-6">App Updates</h2>
-        <p>We regularly update CEORater with new features, improvements, and bug fixes. Make sure you have automatic updates enabled in your App Store settings to get the latest version.</p>
-
-        <!-- Contact Info Repeated -->
+        <!-- More help -->
         <div class="bg-gray-50 border border-gray-200 rounded-lg p-6 mt-8">
           <h2 class="text-xl font-bold text-gray-800 mb-3">Still Need Help?</h2>
-          <p class="text-gray-700 mb-3">Can't find what you're looking for? We're here to help with any questions, feedback, or technical issues.</p>
+          <p class="text-gray-700 mb-3">We’re happy to assist with any questions, feedback, or technical issues.</p>
           <a href="mailto:support@ceorater.com" class="text-blue-600 hover:underline font-semibold">
             Contact Support: support@ceorater.com
           </a>
@@ -121,18 +94,27 @@
     <a id="support-footer-privacy" href="./privacy.html">Privacy Policy</a>
   </footer>
 
-  <!-- Optional: make mailto work nicely in Simulator by copying address -->
+  <!-- Make mailto work (Capacitor openUrl) + Simulator fallback -->
   <script>
-    document.addEventListener('click', (e) => {
-      const a = e.target.closest('a[href]');
-      if (!a) return;
-      const href = a.getAttribute('href') || '';
-      if (/^mailto:/i.test(href) && !/iPhone|iPad|iPod/.test(navigator.userAgent)) {
+  document.querySelectorAll('a[href^="mailto:"]').forEach(a=>{
+    a.addEventListener('click', async (e)=>{
+      const url = a.getAttribute('href') || '';
+      const openUrl =
+        (window.Capacitor && window.Capacitor.App && window.Capacitor.App.openUrl) ||
+        (window.Capacitor && window.Capacitor.Plugins && window.Capacitor.Plugins.App && window.Capacitor.Plugins.App.openUrl);
+
+      try {
+        if (openUrl) { e.preventDefault(); await openUrl({ url }); return; }
+      } catch {}
+
+      // Simulator (no Mail app): copy address and notify
+      if (!/iPhone|iPad|iPod/.test(navigator.userAgent)) {
         e.preventDefault();
-        try { navigator.clipboard.writeText(href.replace(/^mailto:/i,'')); } catch {}
-        alert('Email copied: ' + href.replace(/^mailto:/i,''));
+        try { await navigator.clipboard.writeText(url.replace(/^mailto:/i,'')); } catch {}
+        alert('Email copied: ' + url.replace(/^mailto:/i,''));
       }
     });
+  });
   </script>
 </body>
 </html>
